Library/AXL(Library)/Visual Basic/AXM.bas


' dPositivePos setting range : 0 ~ positive number
' dNegativePos setting range : negative number ~ 0
Public Declare Function AxmStatusSetPosType Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uPosType As Long, ByVal dPositivePos As Double, ByVal dNegativePos As Double) As Long
' Return the Position Information Type of of specific axis.
Public Declare Function AxmStatusGetPosType Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upPosType As Long, ByRef dpPositivePos As Double, ByRef dpNegativePos As Double) As Long
' Set absolute encoder origin offset Position of specific axis. [Only for PCI-R1604-MLII]
Public Declare Function AxmStatusSetAbsOrgOffset Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dOrgOffsetPos As Double) As Long
' Set absolute encoder origin offset Position of specific axis. [Only for PCI-R1604-MLII]
Public Declare Function AxmStatusGetAbsOrgOffset Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpOrgOffsetPos As Double) As Long


' Set the actual position of specific axis.
Public Declare Function AxmStatusSetActPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long
' Return the actual position of specific axis.
Public Declare Function AxmStatusGetActPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpPos As Double) As Long
    Public Declare Function AxmStatusGetAmpActPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpPos As Double) As Long


' Set command position of specific axis.
Public Declare Function AxmStatusSetCmdPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long
' Return command position of specific axis.
Public Declare Function AxmStatusGetCmdPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpPos As Double) As Long
' Set command position and actual position of specific axis
' Only RTEX use
Public Declare Function AxmStatusSetPosMatch Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long


' You can check motion status of specified axis at once by using this API.(Cmd, Act, Driver Status, Mechanical Signal, Universal Signal)
' Specify motion status information by dwMask setting of MOTION_INFO structure.
' dwMask : Display of the motion state (6bit) - ex) dwMask = Display all status if you set '0x1F'.
' The Level(In/Out) is not reflected which is set by user.
'    [0]        |    Command Position Read
'    [1]        |    Actual Position Read
'    [2]        |    Mechanical Signal Read
'    [3]        |    Driver Status Read
'    [4]        |    Universal Signal Input Read
'               |    Universal Signal Output Read
Public Declare Function AxmStatusReadMotionInfo Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef pMI As MOTION_INFO) As Long


' API for Network product only
' API for read AlarmCode of specified axis.
Public Declare Function AxmStatusRequestServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' API for read AlarmCode of specified axis.
' upAlarmCode      : Refer to Alarm Code of SERVOPACK.
' MR_J4_xxB        : Upper 16bit(Decimal value of 2 digits alarm code), Lower 16bit(Decimal value of 1digit detail alarm code)
' uReturnMode      : Set return condition of API.[Not used in SIIIH(MR-J4-xxB)]
' [0-Immediate]    : Return immediately after function execution.
' [1-Blocking]     : Does not return until the alarm code is read from SERVOPACK.
' [2-Non Blocking] : Does not return until the alarm code is read from SERVOPACK. but program is not blocked.
Public Declare Function AxmStatusReadServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uReturnMode As Long, ByRef upAlarmCode As Long) As Long
' The API to recieve alarm string about specified error code.
Public Declare Function AxmStatusGetServoAlarmString Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uAlarmCode As Long, ByVal lAlarmStringSize As Long, ByRef szAlarmString As String) As Long
    Public Declare Function AxmStatusReadServoAlarmString Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lAlarmStringSize As Long, ByRef szAlarmString As char*) As Long

' The API to Command to SERVOPACK for read Alarm History of specified axis.
Public Declare Function AxmStatusRequestServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' The API to read SERVOPACK alarm history of specified axis.
' lpCount          : Number of read alarm history.
' upAlarmCode      : The array to return alarm history.
' uReturnMode      : Set return mode of this API.
' [0-Immediate]    : Return immediately after function execution.
' [1-Blocking]     : Not return until reading alarm code from SERVOPACK.
' [2-Non Blocking] : Not return until reading alarm code from SERVOPACK. but program is not blocked.
Public Declare Function AxmStatusReadServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uReturnMode As Long, ByRef lpCount As Long, ByRef upAlarmCode As Long) As Long
' Clear SERVOPACK alarm history of specified axis.
Public Declare Function AxmStatusClearServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Long) As Long


'======== API related home. =============================================================================================================================================================================================
' Set home sensor level of specific axis.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmHomeSetSignalLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' Return home sensor level of specific axis.
Public Declare Function AxmHomeGetSignalLevel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long
' Verify current home signal input status. Hoe signal can be set by user optionally by using AxmHomeSetMethod API.
' upStatus : OFF(0), ON(1)
Public Declare Function AxmHomeReadSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long



' Parameters related to origin detecting must be set in order to detect origin of relevant axis.
' If the initialization is done properly by using MotionPara setting file, no separate setting is required.
' In the setting of origin detecting method, direction of detecting proceed, signal to be used for origin, active level of origin sensor and detecting/no detecting of encoder Z phase are set.
' Caution : When the level is set wrong, it may operate + direction even though ? direction is set, and may cause problem in finding home.
' (Refer the guide part of AxmMotSaveParaAll for detail information. )
' Use AxmSignalSetHomeLevel for home level.
' HClrTim : HomeClear Time : Queue time for setting origin detecting Encoder value.
' HmDir(Home direction): DIR_CCW(0): - direction    , DIR_CW(1) = + direction   // HOffset ? traveled distance after detecting of origin.
' uZphas: Set whether to detect of encoder Z phase after completion of the 1st detecting of origin.
' HmSig : PosEndLimit(0) -> +Limit
'         NegEndLimit(1) -> -Limit
'         HomeSensor (4) -> origin sensor(universal input 0)

Public Declare Function AxmHomeSetMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lHmDir As Long, ByVal uHomeSignal As Long, ByVal uZphas As Long, ByVal dHomeClrTime As Double, ByVal dHomeOffset As Double) As Long
' Return set parameters related to home.
Public Declare Function AxmHomeGetMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpHmDir As Long, ByRef upHomeSignal As Long, ByRef upZphas As Long, ByRef dpHomeClrTime As Double, ByRef dpHomeOffset As Double) As Long


' Set Home Search Fine tunning Method (Don't care Setting by default).
' dHomeDogDistance[500 pulse]: Set Dog Length. (Unit = AxmMotSetMoveUnitPerPulse function Setting Unit)
' lLevelScanTime[100msec]: Set level status confirmation scan time. (msec[1~1000])
' dwFineSearchUse[USE]: Select find search method. (Default use 5Step, Select 0 use 3Step)
' dwHomeClrUse[USE]: Set After Home Search Automatically Command/Actual Position Set 0 value of  specific axis.
Public Declare Function AxmHomeSetFineAdjust Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dHomeDogLength As Double, ByVal lLevelScanTime As Long, ByVal uFineSearchUse As Long, ByVal uHomeClrUse As Long) As Long
' Return set Home  Search fine tunning Method parameters related to home.
Public Declare Function AxmHomeGetFineAdjust Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpHomeDogLength As Double, ByRef lpLevelScanTime As Long, ByRef upFineSearchUse As Long, ByRef upHomeClrUse As Long) As Long

    Public Declare Function AxmHomeSetInterlock Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uInterlockMode As Long, ByVal dInterlockData As Double) As Long
    Public Declare Function AxmHomeGetInterlock Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upInterlockMode As Long, ByRef dpInterlockData As Double) As Long


' Detect through several steps in order to detect origin quickly and precisely. Now, set velocities to be used for each step.
' The time of origin detecting and the accuracy of origin detecting are decided by setting of these velocities.
' Set velocity of origin detecting of each axis by changing velocities of each step.
' (Refer the guide part of AxmMotSaveParaAll for detail information.)
' API which sets velocity to be used in origin detecting.
' [dVelFirst]- 1st move velocity   [dVelSecond]- velocity after detecting   [dVelThird]- the last velocity  [dvelLast]- index detecting and in order to detect precisely.
' [dAccFirst]- 1st move acceleration [dAccSecond]-acceleration after detecting.
Public Declare Function AxmHomeSetVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVelFirst As Double, ByVal dVelSecond As Double, ByVal dVelThird As Double, ByVal dVelLast As Double, ByVal dAccFirst As Double, ByVal dAccSecond As Double) As Long
' Return set velocity to be used in origin detecting.
Public Declare Function AxmHomeGetVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpVelFirst As Double, ByRef dpVelSecond As Double, ByRef dpVelThird As Double, ByRef dpVelLast As Double, ByRef dpAccFirst As Double, ByRef dpAccSecond As Double) As Long


' Start to detect origin.
' When origin detecting start API is executed, thread which will detect origin of relevant axis in the library is created automatically and it is automatically closed after carrying out of the origin detecting in sequence.
Public Declare Function AxmHomeSetStart Lib "AXL.dll" (ByVal lAxisNo As Long) As Long
' User sets the result of origin detecting optionally.
' When the detecting of origin is completed successfully by using origin detecting API, the result of detecting is set as HOME_SUCCESS.
' This API enables user to set result optionally without execution of origin detecting.
' uHomeResult Setup
' HOME_SUCCESS           = 0x01,
' HOME_SEARCHING         = 0x02,
' HOME_ERR_GNT_RANGE     = 0x10, // Gantry Home Range Over
' HOME_ERR_USER_BREAK    = 0x11, // User Stop Command
' HOME_ERR_VELOCITY      = 0x12, // Velocity is very slow and fast
' HOME_ERR_AMP_FAULT     = 0x13, // Servo Drive Alarm
' HOME_ERR_NEG_LIMIT     = 0x14, // (+)Limit sensor check (-)dir during Motion
' HOME_ERR_POS_LIMIT     = 0x15, // (-)Limit sensor check (+)dir during Motion
' HOME_ERR_NOT_DETECT    = 0x16, // not detect User set signal
' HOME_ERR_UNKNOWN       = 0xFF,
Public Declare Function AxmHomeSetResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uHomeResult As Long) As Long
' Return the result of origin detecting.
' Verify detecting result of origin detection API. When detecting of origin is started, it sets as HOME_SEARCHING, and if the detecting of origin is failed the reason of failure is set. Redo origin detecting after eliminating of failure reasons.
Public Declare Function AxmHomeGetResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upHomeResult As Long) As Long

